--- a/AI Distillation/acronyms.tex
+++ b/AI Distillation/acronyms.tex
@@ -46,3 +46,9 @@
 	long  = Parameter-Efficient Fine-Tuning,
 	tag = abbrev
 }
+
+\DeclareAcronym{KD}{
+	short = KD,
+	long  = Knowledge Distillation,
+	tag = abbrev
+}
