--- a/AI Distillation/config/lang.tex
+++ b/AI Distillation/config/lang.tex
@@ -44,8 +44,6 @@
   \ifcase\doclanguage
   \or
     \{Nom del Grau\}%
-  \or
-    \{Nombre del Grado\}%
   \else
     Degree in Telecommunication Technologies and Services Engineering
   \fi
@@ -80,8 +78,7 @@
   \or
     \{Nombre del Autor\}%
   \else
-    %Noa Paguera Contelles
-    \{Name of the Author\}
+    Noa Paguera Contelles
   \fi
 }
 
@@ -141,7 +138,8 @@
   \or
     \textit{\{Nombre del director del proyecto\}}
   \else
-    \textit{\{Advisor's Name\}}
+    Khac-Hoang Ngo \\
+    Sergi Bermejo
   \fi
 }
 
@@ -169,7 +167,7 @@
   \or
     Director/a:
   \else
-    Advisor:
+    Advisors:
   \fi \AdvisorName
 }
 \newcommand\ReviewerLine{
