--- a/AI Distillation/revision_history_en.tex
+++ b/AI Distillation/revision_history_en.tex
@@ -41,9 +41,9 @@
   \hline
     \multicolumn{2}{|l||}{\textbf{Written by:}}  &  \multicolumn{2}{l|}{\textbf{Reviewed and approved by:}} \\
   \hline
-    Date &  22/10/2025 & Date &  dd/mm/yyyy \\
+    Date & 14/01/2026 & Date & dd/mm/yyyy \\
   \hline
-    Name &   & Name &  \\
+    Name & Noa Paguera Contelles & Name & Khac-Hoang Ngo \\
   \hline
     Position & Project Author & Position & Project Supervisor \\
   \hline
