--- a/AI Distillation/state_of_art.tex
+++ b/AI Distillation/state_of_art.tex
@@ -12,7 +12,7 @@
 %  Aquí teniu un parell de cites a referències sobre \LaTeX~\cite{latexcompanion} i electrodinàmica \cite{einstein}.
 
 %\else
-  \chapter[State of the art]{State of the art of the technology applied in this thesis}
+  \chapter[State of the art]{State of the Art of the technology applied in this thesis}
 
   % The "Technology State of the Art" chapter offers a detailed view of the current advancements related to the topic of your work. It should describe key theories, models, algorithms, or developments in software and hardware, supported by peer-reviewed articles and other resources such as books, patents, technical reports, etc. This chapter sets the context and helps readers understand the existing landscape in the field. Consequently, the \textbf{citations to relevant bibliographic references} are an important part of the content.
   
@@ -30,7 +30,7 @@
   
   On the other hand, edge devices such as smartphones, IoT sensors, drones, and medical wearables, have resource constraints, including limited processing power, memory, and energy. Despite these constraints, edge computing is becoming increasingly important because it reduces latency, lowers dependence on centralized cloud services, and improves privacy by keeping sensitive data local. A key challenge in this field is finding a way to leverage the power of deep learning models while addressing the limitations of edge devices.
 
-  \section{Model compression}
+  \section{Model Compression}
   
   The deployment of advanced AI models on edge devices with limited resources has motivated substantial research into model compression techniques. The central goal of this field is to balance the power of large models with the requirements of efficiency, latency and privacy. This field has evolved from applying individual optimization techniques in isolation to designing integrated, multi-stage pipelines that synergistically combine methods for maximum efficiency.
   
@@ -104,7 +104,7 @@
   
   This project meets at the intersection of these trends, using information-theoretic concepts to guide the distillation process and structuring the pipeline in a way that is directly applicable to a future federated deployment.
   
-  While these multi-stage pipelines are emerging, particularly in natural language processing, a systematic, empirical study of a sequential KD → LoRA → Quantization pipeline for computer vision remains a clear research gap.
+  While these multi-stage pipelines are emerging, particularly in natural language processing, a systematic, empirical study of a sequential KD, LoRA and Quantization pipeline for computer vision remains a clear research gap.
 
 
 
