--- a/AI Distillation/acknowlegdements.tex
+++ b/AI Distillation/acknowlegdements.tex
@@ -8,6 +8,12 @@
 \else
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{section}{Acknowledgements}
+I would like to express my sincere gratitude to Professor Khac-Hoang Ngo, my supervisor, for giving me the amazing opportunity to conduct research at Linköping University and for his continuous guidance, constant availability and support during the months I spent in Linköping working on my bachelor’s thesis.
+
+I want to thank Professor Sergi Bermejo from Universitat Politècnica de Catalunya for
+his patience and guidance, which helped me throughout the project.
+
+Finally, I would like to express my gratitude for the unwavering support of my parents and friends.
 
 %It is appropriate, but not mandatory, to declare the extent to which assistance has been given by members of the staff, fellow students, technicians or others in the collection of materials and data, the design and construction of apparatus, the performance of experiments, the analysis of data, and the preparation of the thesis (including editorial help). In addition, it is appropriate to recognize the supervision and advice given by your advisor.
 \fi
